<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesTakerActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_notes"
            app:title="@string/app_name"
            app:titleTextColor="@color/teal_700"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/imageView_save"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top|right"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:src="@drawable/ic_save"
                />

        </androidx.appcompat.widget.Toolbar>

    </RelativeLayout>

    <EditText
        android:id="@+id/editText_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/editText_title_hint"
        android:textColorHint="#B4424242"
        android:textColor="#018F82"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/editText_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/editText_note_hint"
        android:textColorHint="#B0424242"
        android:textColor="#DA02756A"
        android:textSize="20sp"
        android:textStyle="normal"
        android:typeface="serif"
        android:singleLine="true"/>

</LinearLayout>