<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    android:elevation="8dp"
    android:id="@+id/notes_container"
    android:background="#4318C5B7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="7dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="7dp"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/textView_title_hint"
                android:textColor="#028A7D"
                android:textSize="35sp"
                android:textStyle="bold|italic"
                android:typeface="serif" />
            
            <ImageView
                android:id="@+id/imageView_pin"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_pin"/>

        </RelativeLayout>

            <TextView
                android:id="@+id/textView_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_note_hint"
                android:layout_margin="7dp"
                android:textSize="25sp"
                android:textColor="#026158"
                android:textStyle="normal"
                android:typeface="serif"
                android:maxLines="17"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_alignParentStart="true"
                android:text="@string/textView_date_hint"
                android:textSize="15sp"
                android:textColor="#532C9A"
                android:textStyle="normal"
                android:typeface="serif"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:scrollHorizontally="true"/>

            <ImageView
                android:id="@+id/imageView_theme"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_theme_color"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>